--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "node"
   ],
   "author": "Francois Laubscher",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/fjlaubscher/node-imager.git"
+  },
+  "engines" : {
+    "node": ">=4.3.2"
+  },
+  "engine-strict": true,
   "license": "MIT",
   "dependencies": {
     "imagemagick": "^0.1.3",
